@@ -1,3 +1,7 @@
+Mon Nov  3 12:31:19 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/<various>: Changes required by commit r1542.
+
 Mon Nov  3 08:37:41 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/upscode2.c: Change required by commit r1542.
